--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "baseballhack",
   "version": "0.1.0",
   "private": true,
-  "home":"https://github.com/chrisdel101/baseballhack"
+  "home": "https://github.com/chrisdel101/baseballhack",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
-    "gh-pages": "^2.0.1",
     "query-string": "^6.3.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
@@ -15,7 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
