--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "baseballhack",
   "version": "0.1.0",
   "private": true,
-  "home": "https://github.com/chrisdel101/baseballhack",
+  "home": "https://chrisdel101.github.io./baseballhack/baseballhack",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "gh-pages": "^2.0.1",
     "query-string": "^6.3.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
